fix spacing

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html {
 body {
     max-width: 800px;
     margin: 0 auto;
-    padding: 50px 25px;
+    padding: 40px 25px;
     display: block;
     font-family: system-ui, sans-serif;
     font-size: 16px;
@@ -18,7 +18,7 @@ body {
 }
 
 h1 {
-    margin: 50px 0;
+    margin: 30px 0;
 }
 
 h1,
@@ -27,6 +27,7 @@ h3 {
     font-weight: normal;
     line-height: 100%;
 }
+h2 {margin: 10px 0;}
 
 a[href] {
     color: #777;
@@ -55,10 +56,10 @@ ul.info-list, p {
 
 p {font-size: 1.1rem;}
 .ico {
-    width: 40vmin;
+    width: 22vmin;
     min-width: 100px;
     height: auto;
-    border: 3vmin solid #96e1fb;
+    border: 2vmin solid #96e1fb;
     border-radius: 50%;
 }
 .reel {
